# Laboratory_works

Big_Data/Map_Reduce/: README.md
Big_Data/Map_Reduce/Server/: CMakeLists.txt
Big_Data/Map_Reduce/Server/src/: ThreadTcpSocket.cpp  ThreadTcpSocket.h  main.cpp  server.cpp  server.h  support.cpp  support.h  worker.cpp  worker.h
Big_Data/Map_Reduce/client/: CMakeLists.txt  data.txt
Big_Data/Map_Reduce/client/src/: ConnectionComponent.qml  connection.cpp  connection.h  connectionlist.cpp  connectionlist.h  connectionmodel.cpp  connectionmodel.h  constants.h  main.cpp  main.qml  messageprocessing.cpp  messageprocessing.h  qml.qrc  worker.cpp  worker.h
Linear_Programming/hungarian_algorithm/: README.md
Linear_Programming/hungarian_algorithm/src/: Makefile  constants.h  data.txt  hungarian.cpp  hungarian.h  main.cpp  matrix.cpp  matrix.h
